--- a/zentao/tasks.html
+++ b/zentao/tasks.html
@@ -24,6 +24,7 @@
 </ul>
 
   <script src="js/$.js"></script>
+  <script src="js/console.js"></script>
   <script src="js/store.js"></script>
   <script src="js/md5.min.js"></script>
   <script src="js/mui.js"></script>
