--- a/zentao/index.html
+++ b/zentao/index.html
@@ -90,11 +90,12 @@
     </section>
   </div>
   <script src="js/$.js"></script>
+  <script src="js/console.js"></script>
   <script src="js/store.js"></script>
   <script src="js/md5.min.js"></script>
   <script src="js/mui.js"></script>
-  <script src="js/webview.js"></script>
   <script src="js/zentao.js"></script>
+  <script src="js/webview.js"></script>
   <script src="js/app.js"></script>
   <script>
   </script>
