--- a/zentao/todos.html
+++ b/zentao/todos.html
@@ -52,11 +52,21 @@
     <li>Fugiat culpa repudiandae, suscipit. Odit numquam, maiores placeat voluptatum quis.</li>
   </ul>
 
-  <script src="js/$.js"></script>
-  <script src="js/store.js"></script>
-  <script src="js/md5.min.js"></script>
-  <script src="js/mui.js"></script>
-  <script src="js/zentao.js"></script>
-  <script src="js/webview.js"></script>
+<script src="js/$.js"></script>
+<script src="js/console.js"></script>
+<script src="js/store.js"></script>
+<script src="js/mui.js"></script>
+<script src="js/zentao.js"></script>
+<script src="js/webview.js"></script>
+<script>
+zentao.ready(function()
+{
+    zentao.loadData('todo', function(data)
+    {
+        console.color('数据加载成功', 'bgsuccess');
+        console.log(data);
+    });
+});
+</script>
 </body>
 </html>
