* updated zentao.js.

--- a/zentao/todos.html
+++ b/zentao/todos.html
@@ -64,7 +64,7 @@ zentao.ready(function()
     zentao.loadData('todo', function(data)
     {
         console.color('数据加载成功', 'bgsuccess');
-        console.log(data);
+        console.log(zentao.data);
     });
 });
 </script>
