--- a/zentao/todos.html
+++ b/zentao/todos.html
@@ -1,57 +1,84 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>禅道</title>
-    <link href="css/mui.min.css" rel="stylesheet"/>
-    <link href="css/style.css" rel="stylesheet"/>
-    <link href="css/subpage.css" rel="stylesheet"/>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+  <title>禅道</title>
+  <link href="css/mui.min.css" rel="stylesheet"/>
+  <link href="css/style.css" rel="stylesheet"/>
+  <link href="css/subpage.css" rel="stylesheet"/>
+  <style>
+  body {height: 100%;}
+  .mui-content {position: absolute; top: 0; right: 0; left: 0; bottom: 0;}
+  .mui-content > .mui-slider {min-height: 100%;}
+  .mui-table-view-cell .mui-icon {opacity: 0.5}
+  .mui-table-view-cell.mui-active .mui-icon {opacity: 0.95}
+  .mui-table-view.list-todos-done .mui-table-view-cell {color: #999}
+  .dialog.todo-done .dialog-footer .mui-col-extra {display: none}
+  .dialog.todo-done .dialog-footer .mui-col {width: 100%}
+  </style>
 </head>
 <body>
-  <ul>
-    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, minus.</li>
-    <li>Libero est, dolore explicabo, vitae ratione officia fugit sit assumenda.</li>
-    <li>Nostrum consequuntur nisi eum repellendus veritatis fugiat voluptates molestiae laudantium.</li>
-    <li>Animi impedit odio at libero delectus omnis totam corrupti nostrum.</li>
-    <li>Expedita reiciendis harum unde aliquam quidem omnis commodi placeat, excepturi?</li>
-    <li>Minus rerum cupiditate impedit, excepturi dolor vero, eaque error amet.</li>
-    <li>Ipsa, neque facilis. Eveniet soluta sint, fuga maxime molestias quidem.</li>
-    <li>Distinctio repellat sapiente eos saepe itaque quis aut sint maxime.</li>
-    <li>Nostrum doloremque fugit vel nisi! Vero officiis, voluptate quisquam laborum.</li>
-    <li>Explicabo illo dolorum, adipisci facilis deserunt ut perspiciatis? Cupiditate, quod.</li>
-    <li>A eius dicta asperiores quisquam cupiditate voluptate nemo quae nobis.</li>
-    <li>Adipisci quae alias veniam, eveniet vero sequi autem fuga magnam.</li>
-    <li>Ipsam quo cum doloremque qui error optio animi, perspiciatis in!</li>
-    <li>Autem fugiat delectus maiores vel consectetur reiciendis, perferendis consequuntur libero.</li>
-    <li>Doloribus totam consectetur perspiciatis, quae, est quam ipsum maiores nemo.</li>
-    <li>Unde nobis reprehenderit perspiciatis incidunt blanditiis ex aut ipsum itaque!</li>
-    <li>Rerum veritatis vitae dicta exercitationem, officia cumque ratione nesciunt, ipsum.</li>
-    <li>Pariatur, necessitatibus, officiis? Laudantium, nesciunt fugiat modi reiciendis deserunt corrupti.</li>
-    <li>Hic qui eum rerum velit incidunt laboriosam, illo dignissimos iste!</li>
-    <li>Quidem, fuga quia quam. Repellat sunt aperiam at architecto accusamus.</li>
-    <li>Id distinctio minima praesentium quam voluptas, voluptate aliquid officia ipsa.</li>
-    <li>Soluta ipsam placeat, hic, omnis officia alias? Repudiandae, dicta, inventore!</li>
-    <li>In labore quae saepe, magnam laborum cum corporis ratione est!</li>
-    <li>Exercitationem amet dignissimos ducimus vitae dicta sunt non, consectetur voluptas.</li>
-    <li>Deleniti eius molestiae soluta excepturi at dicta quisquam, consequuntur enim?</li>
-    <li>Dicta amet, dolores accusantium alias quo laborum cupiditate labore sed!</li>
-    <li>Quaerat quos aut pariatur voluptates temporibus hic, culpa optio impedit.</li>
-    <li>Delectus obcaecati vel facere unde suscipit, fugit beatae accusamus! Veniam.</li>
-    <li>Voluptatum, eius. Mollitia libero sapiente aperiam ut eum, ipsam maxime!</li>
-    <li>Facere excepturi blanditiis, quo incidunt molestiae, quae aut iste unde.</li>
-    <li>Omnis sed, recusandae cumque. Saepe voluptatum eos tempore labore. Nam!</li>
-    <li>Aliquid explicabo consequuntur ratione libero vel delectus soluta qui doloribus.</li>
-    <li>Eligendi corporis magni, quo fuga ex esse maxime neque veritatis.</li>
-    <li>Nihil reprehenderit, impedit esse earum perspiciatis deleniti eum, magnam quam.</li>
-    <li>Pariatur at illo impedit porro quo accusantium laudantium tenetur sapiente!</li>
-    <li>Excepturi voluptatibus, laborum ratione praesentium non nihil mollitia unde odit!</li>
-    <li>Eos porro sit repellendus, architecto sint nulla debitis minus amet.</li>
-    <li>Voluptate mollitia ullam ratione sed sunt tenetur a fugit ab.</li>
-    <li>Sunt placeat aliquid ab. Ea accusantium sequi aspernatur nostrum inventore.</li>
-    <li>Fugiat culpa repudiandae, suscipit. Odit numquam, maiores placeat voluptatum quis.</li>
-  </ul>
+<div class="mui-content">
+  <div id="slider" class="mui-slider">
+      <div id="sliderSegmentedControl" class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+        <a class="mui-control-item mui-active" href="#today">今日</a>
+        <a class="mui-control-item" href="#yestoday">昨日</a>
+        <a class="mui-control-item" href="#thisweek">本周</a>
+        <a class="mui-control-item" href="#lastweek">上周</a>
+      </div>
+      <div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-3"></div>
+      <div class="mui-slider-group">
+        <div id="today" class="mui-slider-item mui-control-content mui-active">
+          <ul class="mui-table-view list-todos list-todos-wait">
+            <li class="mui-table-view-divider"><span class="mui-badge mui-badge-danger"><strong>0</strong> 未完成</span></li>
+          </ul>
+          <ul class="mui-table-view list-todos list-todos-done">
+            <li class="mui-table-view-divider"><span class="mui-badge mui-badge-success"><strong>0</strong> 已完成</span></li>
+          </ul>
+        </div>
+        <div id="yestoday" class="mui-slider-item mui-control-content">
+          <ul class="mui-table-view list-todos list-todos-wait">
+            <li class="mui-table-view-divider"><span class="mui-badge mui-badge-danger"><strong>0</strong> 未完成</span></li>
+          </ul>
+          <ul class="mui-table-view list-todos list-todos-done">
+            <li class="mui-table-view-divider"><span class="mui-badge mui-badge-success"><strong>0</strong> 已完成</span></li>
+          </ul>
+        </div>
+        <div id="thisweek" class="mui-slider-item mui-control-content">
+          <ul class="mui-table-view list-todos list-todos-wait">
+            <li class="mui-table-view-divider"><span class="mui-badge mui-badge-danger"><strong>0</strong> 未完成</span></li>
+          </ul>
+          <ul class="mui-table-view list-todos list-todos-done">
+            <li class="mui-table-view-divider"><span class="mui-badge mui-badge-success"><strong>0</strong> 已完成</span></li>
+          </ul>
+        </div>
+        <div id="lastweek" class="mui-slider-item mui-control-content">
+          <ul class="mui-table-view list-todos list-todos-wait">
+            <li class="mui-table-view-divider"><span class="mui-badge mui-badge-danger"><strong>0</strong> 未完成</span></li>
+          </ul>
+          <ul class="mui-table-view list-todos list-todos-done">
+            <li class="mui-table-view-divider"><span class="mui-badge mui-badge-success"><strong>0</strong> 已完成</span></li>
+          </ul>
+        </div>
+      </div>
+  </div>
+</div>
+<div id="dialog" class="dialog">
+  <div class="mui-table-view-cell dialog-header"><span class="mui-icon mui-icon-checkbox"></span> <span class="list-title"></span><span class="mui-badge"></span></div>
+  <div class="dialog-body">
+    <h5 class="mui-content-padded">描述</h5>
+    <div class="mui-content-padded item-desc"></div>
+  </div>
+  <div class="dialog-footer">
+    <div class="mui-row">
+      <div class="mui-col-xs-6 mui-col"><button class="mui-btn mui-btn-block mui-btn-outlined btn-back">返回</button></div>
+      <div class="mui-col-xs-6 mui-col mui-col-extra"><button class="mui-btn mui-btn-positive mui-btn-block">完成任务</button></div>
+    </div>
+  </div>
+</div>
 
+<script src="js/core.js"></script>
 <script src="js/$.js"></script>
 <script src="js/console.js"></script>
 <script src="js/store.js"></script>
@@ -59,14 +86,119 @@
 <script src="js/zentao.js"></script>
 <script src="js/webview.js"></script>
 <script>
+mui.init({swipeBack : false});
+
+var $dailog = $('#dialog');
+$('#dialog .dialog-footer .btn-back').on('click', function()
+{
+    $dailog.classList.remove('in');
+    document.body.classList.remove('dialog-open');
+    setTimeout(function(){$dailog.classList.remove('show');}, 100);
+});
+
+document.querySelector("#slider .mui-slider-group").addDelegateListener("tap", ".mui-table-view-cell", function(e)
+{
+    showItem(this.getAttribute('data-id'), this);
+});
+
 zentao.ready(function()
 {
+    showAll();
+    console.color('zentao ready', 'h3|bgwarning');
+
     zentao.loadData('todo', function(data)
     {
         console.color('数据加载成功', 'bgsuccess');
         console.log(zentao.data);
+        showAll();
     });
 });
+
+function showAll()
+{
+    show('today');
+    show('yestoday');
+    show('thisweek');
+    show('lastweek');
+}
+
+function showItem(id, $item)
+{
+    console.log($item);
+    $item = $item || $('.mui-table-view-cell[data-id="' + id + '"]');
+    var item = zentao.data && zentao.data.todo.getById(id);
+    if(item)
+    {
+        $('#dialog .dialog-header').innerHTML = $item.innerHTML;
+        $('#dialog .dialog-header .mui-badge').innerHTML = item.date.format('MM月dd日') + ' ' + item.begin + ' ~ ' + item.end;
+        $('#dialog .dialog-body .item-desc').innerHTML = item.desc;
+        $dailog.classList[item.status === 'done' ? 'add' : 'remove']('todo-done');
+
+        $dailog.classList.add('show');
+        $dailog.style.height = $item.clientHeight + 'px';
+        $dailog.style.top = ($item.clientHeight + 40) + 'px';
+        setTimeout(function(){$dailog.classList.add('in'); document.body.classList.add('dialog-open');}, 100);
+    }
+    else
+    {
+        $dailog.classList.add('show');
+        $dailog.style.height = $item.clientHeight + 'px';
+        $dailog.style.top = ($item.clientHeight + 40) + 'px';
+
+        setTimeout(function(){$dailog.classList.add('in'); document.body.classList.add('dialog-open');}, 100);
+    }
+};
+
+function show(tab, data)
+{
+    data = data || zentao.filterData('todo', tab);
+    var $tab = $('#' + tab),
+        $wait = $('#' + tab + ' .list-todos-wait'),
+        $done = $('#' + tab + ' .list-todos-done'),
+        waitCount = 0,
+        doneCount = 0,
+        today = Date.parseName('today');
+
+    for(var i = $wait.childNodes.length - 1; i >= 0; i--)
+    {
+        var child = $wait.childNodes[i];
+        if(!(child.classList && child.classList.contains('mui-table-view-divider'))) $wait.removeChild(child);
+    }
+    for(var i = $done.childNodes.length - 1; i >= 0; i--)
+    {
+        var child = $done.childNodes[i];
+        if(!(child.classList && child.classList.contains('mui-table-view-divider'))) $done.removeChild(child);
+    }
+
+    data.forEach(function(val)
+    {
+        var item = document.createElement('li');
+        item.classList.add('mui-table-view-cell');
+        item.setAttribute('id', 'item-' + val.id);
+        item.setAttribute('data-id', val.id);
+        var dateStr = '<span class="mui-badge' + (val.status === 'wait' && val.date < today ? ' mui-badge-warning' : '') + '">' + (tab === 'thisweek' ? val.date.getDayName() + ' ' : (tab === 'lastweek' ? '上' + val.date.getDayName() + ' ' : '')) + val.begin + '</span>';
+        if(val.status === 'wait')
+        {
+            item.innerHTML = '<span class="mui-icon mui-icon-checkbox"></span> <span class="list-title">' + val.name + '</span>' + dateStr;
+            $wait.appendChild(item);
+            waitCount++;
+        }
+        else
+        {
+            item.innerHTML = '<span class="mui-icon mui-icon-checkbox-checked"></span> <span class="list-title">' + val.name + '</span>' + dateStr;
+            $done.appendChild(item);
+            doneCount++;
+        }
+    });
+
+    $('#' + tab + ' .list-todos-wait .mui-table-view-divider .mui-badge > strong').innerHTML = waitCount;
+    $('#' + tab + ' .list-todos-done .mui-table-view-divider .mui-badge > strong').innerHTML = doneCount;
+
+    $wait.classList[waitCount ? 'remove' : 'add']('mui-hidden');
+    $done.classList[doneCount ? 'remove' : 'add']('mui-hidden');
+};
+
+show('today', [{id: 36, name: '测试任务', status: 'wait'}, {id: 36, name: '测试任务2', status: 'wait'}, {id: 36, name: '测试任务3', status: 'wait4'}, {id: 36, name: '测试任务5', status: 'done'}, {id: 36, name: '测试任务6', status: 'done'}]);
 </script>
 </body>
 </html>
