* fixed error of subpages.  * added data filter to zentao.js.

--- a/zentao/index.html
+++ b/zentao/index.html
@@ -89,6 +89,8 @@
       </div>
     </section>
   </div>
+
+  <script src="js/core.js"></script>
   <script src="js/$.js"></script>
   <script src="js/console.js"></script>
   <script src="js/store.js"></script>
