--- a/zentao/index.html
+++ b/zentao/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
   <header class="mui-bar mui-bar-nav">
-    <a class="mui-action-back mui-icon mui-icon-bars mui-pull-left"></a>
-    <a class="mui-action-back mui-icon mui-icon-cog mui-pull-right"></a>
+    <a class="mui-icon mui-icon-bars mui-pull-left"></a>
+    <a class="mui-icon mui-icon-cog mui-pull-right"></a>
     <h1 class="mui-title">
-      <div class="mui-segmented-control">
-        <a class="mui-control-item mui-active" href="###" data-target="#todos">待办</a>
-        <a class="mui-control-item" href="###" data-target="#bugs">Bug</a>
-        <a class="mui-control-item" href="###" data-target="#tasks">任务</a>
+      <div class="mui-segmented-control" id="subpageNav">
+        <a class="mui-control-item mui-active open-subpage" href="###" data-id="todo">待办</a>
+        <a class="mui-control-item open-subpage" href="###" data-id="bug">Bug</a>
+        <a class="mui-control-item open-subpage" href="###" data-id="task">任务</a>
       </div>
     </h1>
   </header>
