--- a/zentao/tasks.html
+++ b/zentao/tasks.html
@@ -1,34 +1,203 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <title>禅道</title>
-    <link href="css/mui.min.css" rel="stylesheet"/>
-    <link href="css/style.css" rel="stylesheet"/>
-    <link href="css/subpage.css" rel="stylesheet"/>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+  <title>禅道</title>
+  <link href="css/mui.min.css" rel="stylesheet"/>
+  <link href="css/style.css" rel="stylesheet"/>
+  <link href="css/subpage.css" rel="stylesheet"/>
+  <style>
+  body {height: 100%; background: #EFEFF4;}
+  .mui-content {position: absolute; top: 0; right: 0; left: 0; bottom: 0;}
+  .mui-content > .mui-slider {min-height: 100%;}
+  .mui-table-view-cell .mui-icon {opacity: 0.5}
+  .mui-table-view-cell.mui-active .mui-icon {opacity: 0.95}
+  .mui-table-view.list-tasks-done .mui-table-view-cell {color: #999}
+  .dialog.task-done .dialog-footer .mui-col-extra {display: none}
+  .dialog.task-done .dialog-footer .mui-col {width: 100%}
+  </style>
 </head>
 <body>
-<ul class="mui-table-view">
-    <li class="mui-table-view-divider">单行列表</li>
-    <li class="mui-table-view-cell">列表第1项</li>
-    <li class="mui-table-view-cell">列表第2项</li>
-    <li class="mui-table-view-cell">列表第3项</li>
-    <li class="mui-table-view-divider">两行列表</li>
-    <li class="mui-table-view-cell"><span class="mui-ellipsis-2">我的内容比较多，但也不会超过两行，因为加了.mui-ellipsis-2,mui会自动截断，变成省略号</span>
-    </li>
-    <li class="mui-table-view-cell"><span class="mui-ellipsis-2">我的内容比较多，但也不会超过两行，因为加了.mui-ellipsis-2,mui会自动截断，变成省略号</span>
-    </li>
-    <li class="mui-table-view-cell"><span class="mui-ellipsis-2">我的内容比较多，但也不会超过两行，因为加了.mui-ellipsis-2,mui会自动截断，变成省略号</span>
-    </li>
-</ul>
+<div class="mui-content">
+  <div id="slider" class="mui-slider">
+      <div id="sliderHeader" class="mui-slider-header">
+        <div id="sliderSegmentedControl" class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+          <a class="mui-control-item mui-active" href="#assignedTo">指派给我</a>
+          <a class="mui-control-item" href="#openedBy">由我创建</a>
+          <a class="mui-control-item" href="#finishedBy">由我完成</a>
+          <a class="mui-control-item" href="#closedBy">由我关闭</a>
+        </div>
+        <div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-3"></div>
+      </div>
+      <div class="mui-slider-group" id="taskList">
+        <div id="assignedTo" class="mui-slider-item mui-control-content mui-active">
+          <ul class="mui-table-view list-tasks">
+          </ul>
+        </div>
+        <div id="openedBy" class="mui-slider-item mui-control-content">
+          <ul class="mui-table-view list-tasks">
+          </ul>
+        </div>
+        <div id="finishedBy" class="mui-slider-item mui-control-content">
+          <ul class="mui-table-view list-tasks">
+          </ul>
+        </div>
+        <div id="closedBy" class="mui-slider-item mui-control-content">
+          <ul class="mui-table-view list-tasks">
+          </ul>
+        </div>
+      </div>
+  </div>
+</div>
+<div id="dialog" class="dialog">
+  <div class="mui-table-view-cell dialog-header"><span class="mui-icon mui-icon-checkbox"></span> <span class="list-title"></span><span class="mui-badge"></span></div>
+  <div class="dialog-body">
+    <h5 class="mui-content-padded">描述</h5>
+    <div class="mui-content-padded item-desc"></div>
+  </div>
+  <div class="dialog-footer">
+    <div class="mui-row">
+      <div class="mui-col-xs-6 mui-col"><button class="mui-btn mui-btn-block mui-btn-outlined btn-back">返回</button></div>
+      <div class="mui-col-xs-6 mui-col mui-col-extra"><button class="mui-btn mui-btn-positive mui-btn-block">完成任务</button></div>
+    </div>
+  </div>
+</div>
 
-  <script src="js/$.js"></script>
-  <script src="js/console.js"></script>
-  <script src="js/store.js"></script>
-  <script src="js/md5.min.js"></script>
-  <script src="js/mui.js"></script>
-  <script src="js/zentao.js"></script>
-  <script src="js/webview.js"></script>
+<script src="js/core.js"></script>
+<script src="js/$.js"></script>
+<script src="js/console.js"></script>
+<script src="js/store.js"></script>
+<script src="js/mui.js"></script>
+<script src="js/zentao.js"></script>
+<script src="js/webview.js"></script>
+<script>
+mui.init(
+{
+    swipeBack: false,
+
+    pullRefresh:
+    {
+        container: '#taskList',
+        down:
+        {
+            contentdown: "下拉可以刷新",
+            contentover: "释放立即刷新",
+            contentrefresh: "正在刷新...",
+            callback: function(callback)
+            {
+                reload(callback);
+            }
+        }
+    }
+});
+
+var $dailog = $('#dialog');
+$('#dialog .dialog-footer .btn-back').on('tap', closeDialog);
+
+document.querySelector("#slider .mui-slider-group").addDelegateListener("tap", ".mui-table-view-cell", function(e)
+{
+    showItem(this.getAttribute('data-id'), this);
+});
+
+zentao.ready(function()
+{
+    // showAll();
+    reload();
+});
+
+function closeDialog()
+{
+    $dailog.classList.remove('in');
+    document.body.classList.remove('dialog-open');
+    setTimeout(function(){$dailog.classList.remove('show');}, 100);
+};
+
+function reload(callback)
+{
+    closeDialog();
+    zentao.loadData('task', function(data)
+    {
+        showAll();
+        callback && callback();
+    });
+}
+
+function showAll()
+{
+    show('assignedTo');
+    show('openedBy');
+    show('finishedBy');
+    show('closedBy');
+}
+
+function showItem(id, $item)
+{
+    $item = $item || $('.mui-table-view-cell[data-id="' + id + '"]');
+    var item = zentao.data && zentao.data.task.getById(id);
+    if(item)
+    {
+        $('#dialog .dialog-header').innerHTML = $item.innerHTML;
+        $('#dialog .dialog-header .mui-badge').innerHTML = item.date.format('MM月dd日') + ' ' + item.begin + ' ~ ' + item.end;
+        $('#dialog .dialog-body .item-desc').innerHTML = item.desc;
+        $dailog.classList[item.status === 'done' ? 'add' : 'remove']('task-done');
+
+        $dailog.classList.add('show');
+        $dailog.style.height = $item.clientHeight + 'px';
+        $dailog.style.top = ($item.clientHeight + 40) + 'px';
+        setTimeout(function(){$dailog.classList.add('in'); document.body.classList.add('dialog-open');}, 100);
+    }
+    else // test code
+    {
+        $dailog.classList.add('show');
+        $dailog.style.height = $item.clientHeight + 'px';
+        $dailog.style.top = ($item.clientHeight + 40) + 'px';
+
+        setTimeout(function(){$dailog.classList.add('in'); document.body.classList.add('dialog-open');}, 100);
+    }
+};
+
+function show(tab, data)
+{
+    data = data || zentao.filterData('task', tab);
+    var $tab = $('#' + tab),
+        $tasks = $('#' + tab + ' .list-tasks'),
+        count = 0,
+        today = Date.parseName('today');
+
+    for(var i = $tasks.childNodes.length - 1; i >= 0; i--)
+    {
+        var child = $tasks.childNodes[i];
+        $tasks.removeChild(child);
+    }
+
+    data.forEach(function(val)
+    {
+        var item = document.createElement('li');
+        item.classList.add('mui-table-view-cell');
+        item.setAttribute('id', 'item-' + val.id);
+        item.setAttribute('data-id', val.id);
+        var dateStr = '<span class="mui-badge' + (val.status === 'wait' && val.date < today ? ' mui-badge-warning' : '') + '">' + (tab === 'thisweek' ? val.date.getDayName() + ' ' : (tab === 'lastweek' ? '上' + val.date.getDayName() + ' ' : '')) + val.begin + '</span>';
+        if(val.status === 'wait')
+        {
+            item.innerHTML = '<span class="mui-icon mui-icon-checkbox"></span> <span class="list-title">' + val.name + '</span>' + dateStr;
+            $wait.appendChild(item);
+            waitCount++;
+        }
+        else
+        {
+            item.innerHTML = '<span class="mui-icon mui-icon-checkbox-checked"></span> <span class="list-title">' + val.name + '</span>' + dateStr;
+            $done.appendChild(item);
+            doneCount++;
+        }
+    });
+
+    $('#' + tab + ' .list-tasks-wait .mui-table-view-divider .mui-badge > strong').innerHTML = waitCount;
+    $('#' + tab + ' .list-tasks-done .mui-table-view-divider .mui-badge > strong').innerHTML = doneCount;
+
+    $wait.classList[waitCount ? 'remove' : 'add']('mui-hidden');
+    $done.classList[doneCount ? 'remove' : 'add']('mui-hidden');
+};
+</script>
 </body>
 </html>
