+ added views of bug and stories.

--- a/zentao/index.html
+++ b/zentao/index.html
@@ -14,8 +14,9 @@
     <h1 class="mui-title">
       <div class="mui-segmented-control" id="subpageNav">
         <a class="mui-control-item mui-active open-subpage" href="###" data-id="todo">待办</a>
-        <a class="mui-control-item open-subpage" href="###" data-id="bug">Bug</a>
         <a class="mui-control-item open-subpage" href="###" data-id="task">任务</a>
+        <a class="mui-control-item open-subpage" href="###" data-id="bug">Bug</a>
+        <a class="mui-control-item open-subpage" href="###" data-id="story">需求</a>
       </div>
     </h1>
   </header>
