--- a/zentao/bugs.html
+++ b/zentao/bugs.html
@@ -55,6 +55,7 @@
 <script src="js/$.js"></script>
 <script src="js/console.js"></script>
 <script src="js/store.js"></script>
+<script src="js/md5.min.js"></script>
 <script src="js/mui.js"></script>
 <script src="js/zentao.js"></script>
 <script src="js/webview.js"></script>
