+ added login.html.

--- a/zentao/index.html
+++ b/zentao/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="mui-bar mui-bar-nav">
-    <a class="mui-icon mui-icon-bars mui-pull-left"></a>
+    <button id="userStatus" class="mui-btn mui-btn-link mui-btn-nav mui-pull-left">连接中…</button>
     <a class="mui-icon mui-icon-cog mui-pull-right"></a>
     <h1 class="mui-title">
       <div class="mui-segmented-control" id="subpageNav">
@@ -22,21 +22,6 @@
   </header>
 
   <div id="content">
-    <section id="login" class="content-view with-padding full show">
-      <div>
-        <div class="logo">
-          <img src="img/bg-zentao.png" alt="">
-        </div>
-        <div id="loginForm">
-          <div class="mui-input-group">
-             <input class="mui-input-clear" id="address" type="url" placeholder="禅道地址(例如：http://zentao.com)">
-            <input id="username" type="text" placeholder="用户名/注册邮箱">
-            <input id="password" type="password" placeholder="密码">
-          </div>
-          <button id="loginBtn" type="button" class="mui-btn mui-btn-primary mui-btn-block">登录</button>
-        </div>
-      </div>
-    </section>
     <section id="list" class="content-view">
     </section>
   </div>
